2006-09-19  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Paul Bijens
	* server-src/amcheck.c: Print "tapelist" instead of "tapefile".

2006-09-19  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/dgram.c (dgram_bind): Remove unused variables.

2006-09-19  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/dgram.c (dgram_bind): Don't set SO_REUSEADDR on socket.

2006-09-19  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (connect_port): Make EHOSTUNREACH and ENETUNREACH
					    fatal error.

2006-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c(dump_sockaddr): Convert from network to machine
					    bytes order before printing.
	* common-src/dgram.c (dgram_recv): Print the fromaddr.

2006-09-15  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Correct order of close/dup.

2006-09-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsdtcp-security.c: Use AMANDA_SERVICE_NAME.

2006-09-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: Check that $dumpers_active is defined.

2006-09-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (conftoken_getc): Return an int.

2006-09-11  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup-dump.c: Works if rundump is not used.

2006-09-05  Jean-Louis Martineau <martineau@zmanda.com>
	* Amanda 2.5.1 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.1).
	* NEWS: Change in amanda-2.5.1

2006-08-30  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Typo in error message.

2006-08-29  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Print error message to stdout before
				  calling error().

2006-08-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c (log_msgout): Seek to begining of file.

2006-08-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/reporter.c: Report if a dump was successfully retried.